--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -14,7 +14,7 @@ jobs:
       -
         uses: actions/setup-go@v2
         with:
-          go-version: '^1.14.0'
+          go-version: '1.25'
       -
         name: Generate coverage report
         run: go test ./... -coverprofile=coverage.txt -covermode=atomic
