--- a/.github/workflows/release-executable.yaml
+++ b/.github/workflows/release-executable.yaml
@@ -19,7 +19,7 @@ jobs:
         name: Setup go
         uses: actions/setup-go@v2
         with:
-          go-version: '^1.16.0'
+          go-version: '1.25'
       -
         name: Download dependencies
         run: go mod download
